<resources>
    <string name="app_name">Evrybit</string>
    <string name="login_background">login_background</string>
    <string name="login_image_button">Login_image_button</string>
    <string name="evrybit_logo">Evrybit_logo</string>
    <string name="forgot_password">forgot_password?</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="add_bitbottom_fade">add_bitbottom_fade</string>
    <string name="add_bit_topfade">add_bit_topfade</string>
    <string name="add_bit_to_this_story">Add Bit to this Story</string>
    <string name="add_bit_camera">Add_bit_camera</string>
    <string name="add_bit_video">Add_bit_video</string>
    <string name="add_bit_text">Add-bit_text</string>
</resources>
