<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evrybit.martin.evrybit.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/background"
        android:src="@drawable/splash_bg2x"
        android:contentDescription="@string/login_background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_navbar_back2x"
        android:contentDescription="@string/login_image_button"
        android:background="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Evrybit_logo"
        android:src="@drawable/told_with_evrybit_background_blur_mobile3x"
        android:contentDescription="@string/evrybit_logo"
        android:background="none"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/back_arrow" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email"
        android:layout_below="@+id/Evrybit_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:hint="@string/email_address"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/Email"
        android:layout_alignLeft="@+id/Email"
        android:layout_alignStart="@+id/Email"
        android:hint="@string/password"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/Login"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password?"
        android:id="@+id/button2"
        android:layout_below="@+id/Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="none"
        android:textColor="#ffffff" />

</RelativeLayout>
