<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.evrybit.martin.evrybit.Add_a_bit"
    android:clickable="false"
    android:background="@drawable/add_bit_bg_overlay3x">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/bottomfade"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/btm_fade_story_cover_img3x"
        android:layout_marginTop="106dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/topfade"
        android:layout_alignStart="@+id/topfade"
        android:contentDescription="@string/add_bitbottom_fade" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/topfade"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/top_fade_camera_viewport3x"
        android:layout_below="@+id/bottomfade"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/add_bit_topfade" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_bit_to_this_story"
        android:adjustViewBounds="true"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/bottomfade"
        android:layout_centerHorizontal="true"
        android:textSize="36dp"
        android:textColor="#ffffff"
        android:fontFamily="AvenirNext-DemiBold"
        android:focusable="false" />
</RelativeLayout>
